Fixing styling issues and adding a test directory to the test lit item.

--- a/app/app.html
+++ b/app/app.html
@@ -43,7 +43,7 @@
             { field: 'fstatus', caption: 'Status', size: '15%' },
         ],
         records: [
-            { recid: 1, fsize: 'Test', fsize: '##MB', fstatus: 'Ready'}
+            { recid: 1, fpath: __dirname, fsize: '##MB', fstatus: 'Ready'}
         ]
     });
 </script>
