Text changes (I need some sleep now).

--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Electron Boilerplate</title>
+    <title>Driveshare</title>
 
     <link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
     <link href="./lib/w2ui-1.4.3.min.css" rel="stylesheet" type="text/css">
@@ -38,7 +38,7 @@
         name   : 'grid', 
         height : '100%',
         columns: [                
-            { field: 'fpath', caption: 'Folder Path', size: '70%' },
+            { field: 'fpath', caption: 'Directory Path', size: '70%' },
             { field: 'fsize', caption: 'Allocated Size', size: '15%' },
             { field: 'fstatus', caption: 'Status', size: '15%' },
         ],
