--- a/app/app.html
+++ b/app/app.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Driveshare</title>
+    <title>DriveShare</title>
 
     <link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
     <link href="./lib/w2ui-1.4.3.min.css" rel="stylesheet" type="text/css">
