--- a/app/app.html
+++ b/app/app.html
@@ -16,14 +16,13 @@
     <script type="text/javascript" src="lib/w2ui-1.4.3.min.js"></script>
 	<script type="text/javascript" src="lib/require.js"></script>
     <script>
-        requirejs(['app'], function (app) {});
-		
-		requirejs(['./modules/grid'], function (grid) {
-			grid.initialize();
-		});
-		
-		requirejs(['./modules/toolbar'], function (toolbar) {
+        requirejs([
+			'app', 
+			'./modules/grid',
+			'./modules/toolbar'
+		], function (app, toolbar, grid) {
 			toolbar.initialize();
+			grid.initialize();
 		});
     </script>
 </head>
