--- a/app/app.html
+++ b/app/app.html
@@ -1,47 +1,50 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>DriveShare</title>
+	<meta charset="utf-8">
+	<title>DriveShare</title>
 
-    <link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
-    <link href="./lib/w2ui-1.4.3.min.css" rel="stylesheet" type="text/css">
+	<link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
+	<link href="./lib/w2ui-1.4.3.min.css" rel="stylesheet" type="text/css">
 	<link href="./lib/font-awesome-4.4.0\css\font-awesome.min.css" rel="stylesheet" type="text/css">
 
 	<script type="text/javascript" src="lib/electron_boilerplate/env_config.js"></script>
-    <script type="text/javascript" src="lib/electron_boilerplate/context_menu.js"></script>
-    <script type="text/javascript" src="lib/electron_boilerplate/external_links.js"></script>
-    
-    <script type="text/javascript" src="lib/jquery-1.11.3.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
-    <script type="text/javascript" src="lib/w2ui-1.4.3.min.js"></script>
+	<script type="text/javascript" src="lib/electron_boilerplate/context_menu.js"></script>
+	<script type="text/javascript" src="lib/electron_boilerplate/external_links.js"></script>
+	
+	<script type="text/javascript" src="lib/jquery-1.11.3.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
+	<script type="text/javascript" src="lib/w2ui-1.4.3.min.js"></script>
 	<script type="text/javascript" src="lib/require.js"></script>
-    <script>
-        requirejs([
-			'app', 
-			'./modules/grid',
-			'./modules/toolbar',
-            './modules/preferences'
-		], function (app, grid, toolbar, preferences) {
-			grid.initialize();
-			toolbar.initialize();
-            preferences.initialize();
-		});
-    </script>
 </head>
 <body>
-    <div class="header">
-        <h1 id="greet"></h1>
-        <p class="subtitle">
-            <a href='http://driveshare.org/' class="js-external-link">Storj DriveShare</a> version <strong id="version"></strong>, <strong id="env-name"></strong> environment.
-        </p>
+	<div class="header">
+		<h1 id="greet"></h1>
+		<p class="subtitle">
+			<a href='http://driveshare.org/' class="js-external-link">Storj DriveShare</a> version <strong id="version"></strong>, <strong id="env-name"></strong> environment.
+		</p>
 		<p class="subtitle">
 			You are running an early alpha build of the DriveShare GUI application, some features might be missing or broken.
 		</p>
 		<p class="subtitle">
-            Please <a href='https://github.com/Storj/driveshare-gui/issues' class="js-external-link">post an issue on the github repo</a> if you encounter any problems. Thank you for being an early supporter of <a href="http://storj.io" class="js-external-link">Storj</a>.
-        </p>
-    </div>
+			Please <a href='https://github.com/Storj/driveshare-gui/issues' class="js-external-link">post an issue on the github repo</a> if you encounter any problems. Thank you for being an early supporter of <a href="http://storj.io" class="js-external-link">Storj</a>.
+		</p>
+	</div>
 	<div id="toolbar" style="padding: 4px; border: 1px solid silver; border-radius: 3px"></div>
 	<div id="grid" style="width: 100%; height: 100%;">
 </body>
+<script>
+	requirejs([
+		'app',
+		'./modules/process',
+		'./modules/preferences',
+		'./modules/toolbar',
+		'./modules/grid'
+		], function(app, process, preferences, toolbar, grid) {
+			process.initProcess();
+			preferences.initPreferences();
+			toolbar.initToolbar();
+			grid.initGrid();
+		}
+	);
+</script>
 </html>
