Added ability to visualize directories in the grid.

--- a/app/app.html
+++ b/app/app.html
@@ -35,15 +35,15 @@
 <script>
 	requirejs([
 		'app',
+		'./modules/grid',
 		'./modules/process',
 		'./modules/preferences',
-		'./modules/toolbar',
-		'./modules/grid'
-		], function(app, process, preferences, toolbar, grid) {
+		'./modules/toolbar'
+		], function(app, grid, process, preferences, toolbar) {
+			grid.initGrid()
 			process.initProcess();
 			preferences.initPreferences();
 			toolbar.initToolbar();
-			grid.initGrid();
 		}
 	);
 </script>
