Removed 'addDirectory' popup, added datashareDirectory and datashareSize options to preferences dialog.

--- a/app/app.html
+++ b/app/app.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<title>DriveShare</title>
 
-	<link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
 	<link href="./lib/w2ui-1.4.3.min.css" rel="stylesheet" type="text/css">
 	<link href="./lib/font-awesome-4.4.0\css\font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="./stylesheets/main.css" rel="stylesheet" type="text/css">
 
 	<script type="text/javascript" src="lib/electron_boilerplate/env_config.js"></script>
 	<script type="text/javascript" src="lib/electron_boilerplate/context_menu.js"></script>
@@ -26,7 +26,7 @@
 			You are running an early alpha build of the DriveShare GUI application, some features might be missing or broken.
 		</p>
 		<p class="subtitle">
-			Please <a href='https://github.com/Storj/driveshare-gui/issues' class="js-external-link">post an issue on the github repo</a> if you encounter any problems. Thank you for being an early supporter of <a href="http://storj.io" class="js-external-link">Storj</a>.
+			Please <a href='https://github.com/Storj/driveshare-gui/issues' class="js-external-link">post an issue on the github repo</a> if you encounter a problem. Thank you for being an early supporter of <a href="http://storj.io" class="js-external-link">Storj</a>.
 		</p>
 	</div>
 	<div id="toolbar" style="padding: 4px; border: 1px solid silver; border-radius: 3px"></div>
