Updating environment version.

--- a/app/app.html
+++ b/app/app.html
@@ -23,7 +23,7 @@
 			<a href='http://driveshare.org/' class="js-external-link">Storj DriveShare</a> version <strong id="version"></strong>, <strong id="env-name"></strong> environment.
 		</p>
 		<p class="subtitle">
-			You are running an early alpha build of the DriveShare GUI application, some features might be missing or broken.
+			You are running an early build of the DriveShare GUI application, some features might be missing or broken.
 		</p>
 		<p class="subtitle">
 			Please <a href='https://github.com/Storj/driveshare-gui/issues' class="js-external-link">post an issue on the github repo</a> if you encounter a problem. Thank you for being an early supporter of <a href="http://storj.io" class="js-external-link">Storj</a>.
