--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DriveShare</title>
-
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-
-    <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
+<title>DriveShare</title>
+<head>
+	<link href="lib/css/bootstrap.min.css" rel="stylesheet">
+	<link href="lib/css/style.css" rel="stylesheet">
+	<link href="lib/css/fonts.css" rel="stylesheet">
+</head>
 
 <body>
 
@@ -51,7 +39,7 @@
 						<div class="form-group col-xs-12">
 							<label for="address" class="control-label">Payout Address</label>
 							<div class="pull-right links">
-								<span><a href="https://counterwallet.io/" target="_blank">Create New Address</a></span>
+								<span id="sjcx-amount"><a href="https://counterwallet.io/" class="js-external-link">Create New Address</a></span>
 							</div>
 							<input type="text" name="address" class="form-control input-address" placeholder="Enter your SJCX Address">
 
@@ -64,10 +52,10 @@
 								<div class="col-xs-8">
 									<input type="text" name="location" class="form-control" placeholder="Select where to keep the data">
 								</div>
-					      		<div class="col-xs-4">
-						      		<button class="btn btn-blue btn-block" type="button">Browse</button>
-					      		</div>
-						    </div>
+								<div class="col-xs-4">
+									<button class="btn btn-blue btn-block" type="button">Browse</button>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="row">
@@ -77,16 +65,16 @@
 								<div class="col-xs-8">
 									<input class="form-control" name="storage" type="number" min="0" placeholder="Set amount of space to share">
 								</div>
-				          		<div class="col-xs-4">
-				          			  <select class="form-control" id="storage-unit">
-									    <option>MB</option>
-									    <option>GB</option>
-									    <option>TB</option>
-									    <option>PB</option>
+								<div class="col-xs-4">
+									  <select class="form-control" id="storage-unit">
+										<option>MB</option>
+										<option>GB</option>
+										<option>TB</option>
+										<option>PB</option>
 									  </select>
-				          		</div>
-					        </div>
-					    </div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</section>
 				<section class="action">
@@ -103,20 +91,46 @@
 							<p><a href="">View Logs</a></p>
 						</div>
 						<div class="col-xs-4 text-center">
-							<p><a href="http://storj.io/">Powered by Storj</a></p>
+							<p><a href="http://storj.io/" class="js-external-link">Powered by Storj</a></p>
 						</div>
 						<div class="col-xs-4 text-right">
-							<p><a href="http://slack.storj.io/">Need Help?</a></p>
+							<p><a href="http://slack.storj.io/" class="js-external-link">Need Help?</a></p>
 						</div>
 					</div>
-				
 				</footer>
-
 			</div>
 		</div>
 	</div>
-
-	<script src="js/jquery-1.11.3.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 </body>
+<script type="text/javascript" src="lib/LAB.min.js"></script>
+<script>
+	$LAB
+	.script("lib/jquery-1.11.3.min.js") 
+	.wait(function() { // init jQuery before loading w2ui
+		window.$ = window.jQuery = module.exports;
+	})
+	.script("lib/require.js")
+	.script("lib/bootstrap.min.js")
+	.script("lib/electron_boilerplate/env_config.js")
+	.script("lib/electron_boilerplate/context_menu.js")
+	.script("lib/electron_boilerplate/external_links.js")
+	.wait(function() { // init order is very important, no touchy
+		requirejs([
+			'./app',
+			'./modules/logs',
+			'./modules/layout',
+			'./modules/process',
+			'./modules/preferences',
+			'./modules/setup'
+			], function(app, logs, layout, process, preferences, setup) {
+				app.initApp();
+				//logs.initLogs();
+				//layout.initLayout();
+				process.initProcess();
+				preferences.initPreferences();
+				setup.initSetup();
+			}
+		);
+	});
+</script>
 </html>
