Setup & updates modals

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -100,6 +100,45 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="modal fade text-center" id="modalSetup" tabindex="-1" role="dialog" aria-labelledby="modalSetup">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <h4 class="modal-title">Welcome to DriveShare</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p>Performing first time initialization, please wait.</p>
+			<div class="spinner spinner-modal">
+			  <div class="rect1"></div>
+			  <div class="rect2"></div>
+			  <div class="rect3"></div>
+			  <div class="rect4"></div>
+			  <div class="rect5"></div>
+			</div>		        
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="modal fade text-center" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUpdate">
+	  <div class="modal-dialog" role="document">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        <h4 class="modal-title">DriveShare Updates</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p>No updates available.</p>
+	        <p>You are already using the latest version.</p>	        
+	      </div>
+	      <div class="modal-footer">
+      		<button type="button" class="btn btn-blue" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
 </body>
 <script type="text/javascript" src="lib/LAB.min.js"></script>
 <script>
