Save userData when values change.

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -91,7 +91,7 @@
 					<section class="action">
 						<div class="row">
 							<div class="col-xs-12">
-								<input id="start" type="submit" class="btn btn-block" value="Start">
+								<input id="start" class="btn btn-block" value="Start">
 							</div>
 						</div>				
 					</section>
