Added free space display (only tested on windows).

--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -60,6 +60,9 @@
 						<div class="row">
 							<div class="form-group col-xs-12">
 								<label for="location" class="control-label">Storage Location</label>
+								<div class="pull-right links">
+									<span id="drive-space"></span>
+								</div>
 								<div class="row">
 									<div class="col-xs-8">
 										<input id="directory" type="text" name="location" class="form-control" placeholder="Select where to keep the data">
@@ -82,7 +85,6 @@
 											<option>MB</option>
 											<option>GB</option>
 											<option>TB</option>
-											<option>PB</option>
 										  </select>
 									</div>
 								</div>
