--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -147,6 +147,22 @@
 		</div>
 	  </div>
 	</div>
+
+	<div class="modal fade text-center" id="modalLogs" tabindex="-1" role="dialog" aria-labelledby="modalLogs">
+	  <div class="modal-dialog" role="document">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			<h4 class="modal-title">Console Logs</h4>
+		  </div>
+		  <div class="modal-body">
+			<pre class="pre-scrollable text-left" id="modalLogsCode">
+			</pre>	        
+		  </div>
+		</div>
+	  </div>
+	</div>
+
 </body>
 
 <script type="text/javascript" src="lib/LAB.min.js"></script>
