--- a/app/driveshare.html
+++ b/app/driveshare.html
@@ -96,7 +96,7 @@
 				<footer>
 					<div class="row">
 						<div class="col-xs-4 text-left">
-							<p><a href="" class="js-view-logs">View Logs</a></p>
+							<p><a href="" class="js-view-logs" data-toggle="modal" data-target="#modalLogs">View Logs</a></p>
 						</div>
 						<div class="col-xs-4 text-center">
 							<p><a href="http://storj.io/" class="js-external-link">Powered by Storj</a></p>
